--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.31.1",
     "lucide-react": "^0.536.0",
     "next": "^16.1.1",
     "next-theme": "^0.1.5",
